fixed scrollbar appearing on schedule

--- a/frontend/plan/src/styles/App.css
+++ b/frontend/plan/src/styles/App.css
@@ -17,12 +17,12 @@ html {
   padding: 0px;
 }
 
-.vertical-section-contents {
+/* .vertical-section-contents {
   display: flex;
   flex-grow: 1;
   overflow: auto;
   flex-direction: column;
-}
+} */
 
 body {
   width: 100%;
